# audiodecoder.nosefart

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.nosefart/: addon.xml  addon.xml.in
audiodecoder.nosefart/resources/language/resource.language.af_za/: strings.po
audiodecoder.nosefart/resources/language/resource.language.am_et/: strings.po
audiodecoder.nosefart/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.nosefart/resources/language/resource.language.ast_es/: strings.po
audiodecoder.nosefart/resources/language/resource.language.az_az/: strings.po
audiodecoder.nosefart/resources/language/resource.language.be_by/: strings.po
audiodecoder.nosefart/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.nosefart/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.nosefart/resources/language/resource.language.ca_es/: strings.po
audiodecoder.nosefart/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.nosefart/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.nosefart/resources/language/resource.language.da_dk/: strings.po
audiodecoder.nosefart/resources/language/resource.language.de_de/: strings.po
audiodecoder.nosefart/resources/language/resource.language.el_gr/: strings.po
audiodecoder.nosefart/resources/language/resource.language.en_au/: strings.po
audiodecoder.nosefart/resources/language/resource.language.en_gb/: strings.po
audiodecoder.nosefart/resources/language/resource.language.en_nz/: strings.po
audiodecoder.nosefart/resources/language/resource.language.en_us/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-nosefart-note.txt
lib/nosefart/: CMakeLists.txt
lib/nosefart/src/: log.c  log.h  memguard.c  memguard.h  osd.h  types.h  version.h
lib/nosefart/src/cpu/nes6502/: dis6502.c  nes6502.c
lib/nosefart/src/machine/: nsf.c  nsf.h
lib/nosefart/src/sndhrdw/: fds_snd.c  fmopl.c  mmc5_snd.c  nes_apu.c  nes_apu.h  vrc7_snd.c  vrcvisnd.c
src/: NSFCodec.cpp  NSFCodec.h
(+62 files in other folders)
